fix(ui): Move to New Window > css properties like flex acting weird - address bar is not center aligned and table has its own font size (this was due to not having the doctype tag on the window.open - which made the opened window run in html quirks mode)

--- a/packages/ui/src/styles/main.css
+++ b/packages/ui/src/styles/main.css
@@ -446,7 +446,3 @@ a {
 .modal {
     --default-border-color: var(--default-border-color-modal);
 }
-
-table {
-    font-size: inherit;
-}
